--- a/store/email/default/template/_default/layout.base.text.twig
+++ b/store/email/default/template/_default/layout.base.text.twig
@@ -1,5 +1,5 @@
 {% block content %}{% endblock %}
 
 {{ company_info.company }}
-{{ company_info.street }} {{ company_info.nr }} - {{ company_info.zipcode }} {{ company_info.city }} - {{ company_info.country.name }}
+{{ company_info.street }} {{ company_info.nr }} - {{ company_info.zipcode }} {{ company_info.city }} - {{ attribute(settings.country, 'text_' ~ env.language.name_short ~ '_name') }}
 {% trans "P" %}: {{ company_info.phone }} - {% trans "W" %}: {{ company_info.website }} - {% trans "E" %}: {{ company_info.email }} - {{ company_info.vat }}
