--- a/app/admin/media/css/style.css
+++ b/app/admin/media/css/style.css
@@ -191,3 +191,12 @@ body {
 .panel-link {
 	cursor: pointer;
 }
+
+
+.table>tbody>tr>td.grand-total {
+	vertical-align: middle;
+	text-align: right;
+	font-size: 1.3em;
+	font-weight: bold;
+	padding-top: 5px;
+}
