--- a/app/admin/template/sales/invoice.twig
+++ b/app/admin/template/sales/invoice.twig
@@ -439,7 +439,7 @@
 					<div class="col-xs-3">
 						<div class="panel panel-default customer_contact">
 							<div class="panel-body text-center">
-								<a class="btn btn-default" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="{{ customer_contacts|length }}">
+								<a class="btn btn-default" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="0">
 									{% trans "Create new" %}
 								</a>
 							</div>
