--- a/app/admin/template/administrative/document.twig
+++ b/app/admin/template/administrative/document.twig
@@ -190,65 +190,9 @@
 				</div>
 			</div>
 			{% endif %}
+
+			{% include '/administrative/document/document.form.supplier.twig' %}
 		</div>
-
-		{% if document.supplier is defined %}
-			<div class="row">
-				<div class="col-xs-8">
-					<div class="panel panel-default">
-						<div class="panel-heading">{% trans "Supplier" %}</div>
-						<div class="panel-body">
-
-							<form class="form-horizontal form-condensed" action="{{ env.module.get_module_path() }}?action=edit&id={{ document.supplier.id }}" method="post">
-
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "Company" %}</label>
-									<div class="col-xs-9">
-										<input type="text" class="form-control" name="document[company]" value="{{ document.supplier.company }}" />
-									</div>
-								</div>
-
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "VAT" %}</label>
-									<div class="col-xs-9">
-										<input type="text" class="form-control" name="document[vat]" value="{{ document.supplier.vat }}" />
-									</div>
-								</div>
-
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "IBAN" %}</label>
-									<div class="col-xs-9">
-										<input type="text" class="form-control" name="document[iban]" value="{{ document.supplier.iban | iban_to_human_format }}" />
-									</div>
-								</div>
-
-								<div class="form-group">
-									<label class="col-xs-3 control-label">{% trans "BIC" %}</label>
-									<div class="col-xs-9">
-										<input type="text" class="form-control" name="document[bic]" value="{{ document.supplier.bic }}" />
-									</div>
-								</div>
-
-
-								<hr>
-								<div class="form-group">
-									<div class="col-xs-9 col-xs-offset-3">
-										<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
-										<button type="button" href="#modal-supplier-select" data-toggle="modal" class="btn btn-default">{% trans "Change supplier" %}</button>
-									</div>
-								</div>
-
-							</form>
-						</div>
-					</div>
-
-				</div>
-			</div>
-
-			{% include 'administrative/customer/modal.supplier_select.twig' with {'id': 'modal-supplier-select', 'supplier': document.supplier, 'redirect': '/administrative/document?action=edit&id=' ~ document.id } %}
-
-
-		{% endif %}
 
 		{% if document.classname == 'Document_Incoming_Invoice' or document.classname == 'Document_Incoming_Creditnote' %}
 		<div class="row">
@@ -697,11 +641,7 @@
 			});
 			$('.autocomplete_supplier').on('typeahead:selected typeahead:autocompleted', function(e,data) {
 				$('.supplier_id').val(data.id);
-				if (data.iban != "") {
-					$('#iban').html(data.iban);
-				} else {
-					$('#iban').html('<em>{% trans "Unknown IBAN" %}</em>');
-				}
+				$("#autocomplete_supplier_btn").removeClass("hide");
 			});
 
 			var customers = new Bloodhound({
