F#20107 Add iban_to_human_format twig filter to iban numbers

--- a/app/admin/template/administrative/document.twig
+++ b/app/admin/template/administrative/document.twig
@@ -230,7 +230,7 @@
 							</td>
 							<td>{{ transaction.get_message() }}</td>
 							<td>{{ transaction.other_account_name }}</td>
-							<td>{{ transaction.other_account_number }}</td>
+							<td>{{ transaction.other_account_number|iban_to_human_format }}</td>
 							<td>&euro;{{ balance.amount|number_format }}</td>
 						</tr>
 						{% if loop.last %}
