--- a/app/admin/template/financial/account/transaction.twig
+++ b/app/admin/template/financial/account/transaction.twig
@@ -73,7 +73,7 @@
 						</tr>
 
 						<tr {% if active %}class="info"{% endif %} {% if not active %}data-href="{{ href }}"{% endif %}>
-							<td>{{ bank_account_statement_transaction.other_account_number }}</td>
+							<td>{{ bank_account_statement_transaction.other_account_number|iban_to_human_format }}</td>
 						</tr>
 
 						<tr {% if active %}class="info"{% endif %} {% if not active %}data-href="{{ href }}"{% endif %}>
