--- a/app/admin/template/setting/extractor/transaction.twig
+++ b/app/admin/template/setting/extractor/transaction.twig
@@ -183,7 +183,7 @@
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">{% trans "Account number" %}</label>
-						<div class="col-xs-9"><p class="form-control-static">{{ transaction.other_account_number }}</div>
+						<div class="col-xs-9"><p class="form-control-static">{{ transaction.other_account_number|iban_to_human_format }}</div>
 					</div>
 
 					<div class="form-group">
