F#20107 Add input mask for iban fields

--- a/app/admin/template/setting/company.twig
+++ b/app/admin/template/setting/company.twig
@@ -128,4 +128,10 @@
 		</div>
 	</form>
 
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$('input[name="setting[iban]"]').mask('SSAA AAAA 0000 0000 0000 0000 0000', { placeholder: '____ ____ ____ ____ ____ ____ ____'  });
+		});
+	</script>
+
 {% endblock content %}
